--- a/src/components/Puppycard.css
+++ b/src/components/Puppycard.css
@@ -6,10 +6,13 @@
     border: solid black;
     padding: 3vh;
     width: 25%;
+    border-radius: 8px;
 }
 
 .puppy-card img {
     width: 50%;
+    border-radius: 8px;
+    border: solid black 2px;
 }
 
 .puppy-container {
